immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onepiece-library
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`onepiece.shivanshs9.me`)
      kind: Rule
      services:
        - name: onepiece-immich-server
          port: http
  tls:
    secretName: tls-pi-shivanshs9-me
